--- a/COMPONENT2/index.html
+++ b/COMPONENT2/index.html
@@ -28,8 +28,20 @@
           <li><a href="#">Home</a></li>
           <li><a href="#">Menu</a></li>
           <li><a href="#">Review</a></li>
+          <li><a href="#">Categories</a>
+            <ul>
+              <li><a href="#">Groceries</a></li>
+              <li><a href="#">Health & beauty</a></li>
+              <li><a href="#">Laundry & Cleaning</a></li>
+            </ul>
+          </li>
           <li><a href="#">About</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="#">Contact</a>
+            <ul>
+              <li><a href="#">Email</a></li>
+              <li><a href="#">Phone</a></li>
+            </ul>
+          </li>
         </ul>
       </div>
       <div class="right-section">
@@ -48,7 +60,7 @@
             id="search"
             placeholder="Search here"
           />
-          <i class="fa fa-search"></i>
+          <button type="submit"><i class="fa fa-search"></i></button>
         </div>
         <div class="content">
           <div class="text">
