--- a/COMPONENT2/index.html
+++ b/COMPONENT2/index.html
@@ -12,104 +12,38 @@
     />
   </head>
   <body>
-    <!-- ===========header=========== -->
+    <!-- ===========header-section start=========== -->
     <header>
-      <div class="left-section">
-        <div class="logo">
-          <img src="img/logo.png" alt="" />
-        </div>
-        <div class="logo-name">
-          <div class="big-name">Equinox</div>
-          <div class="small-name">Grocery</div>
-        </div>
+      <div class="header-1">
+        <a href="#" class="logo"><i class="fa fa-shopping-basket"></i>Equinox</a>
+
+        <form action="" class="search-box-container">
+          <input type="search" id="search-box" placeholder="Search here......">
+          <label for="search-box" class="fa fa-search"></label>
+        </form>
       </div>
-      <div class="mid-section">
-        <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Menu</a></li>
-          <li><a href="#">Review</a></li>
-          <li><a href="#">Categories</a>
-            <ul>
-              <li><a href="#">Groceries</a></li>
-              <li><a href="#">Health & beauty</a></li>
-              <li><a href="#">Laundry & Cleaning</a></li>
-            </ul>
-          </li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Contact</a>
-            <ul>
-              <li><a href="#">Email</a></li>
-              <li><a href="#">Phone</a></li>
-            </ul>
-          </li>
-        </ul>
-      </div>
-      <div class="right-section">
-        <i class="fa fa-shopping-basket"></i>
-        <button><a href="#">Sign Up</a></button>
+      <div class="header-2">
+        <div id="menu-bar" class="fa fa-bars"></div>
+        <nav class="navbar">
+          <a href="#home">Home</a>
+          <a href="#categories">Categories</a>
+          <a href="#product">Product</a>
+          <a href="#deal">Deal</a>
+          <a href="#product">Product</a>
+        </nav>
+        <div class="icons">
+          <a href="#" class="fa fa-shopping-cart"></a>
+          <a href="#" class="fa fa-heart"></a>
+          <a href="#" class="fa fa-user-circle"></a>
+        </div>
       </div>
     </header>
-    <!-- ==========end header========= -->
-    <!-- ================main========== -->
+    <!-- ==========end header-section========= -->
+    <!-- ================main-section starts========== -->
     <main>
-      <div class="first-main">
-        <div class="search">
-          <input
-            type="search"
-            name="search"
-            id="search"
-            placeholder="Search here"
-          />
-          <button type="submit"><i class="fa fa-search"></i></button>
-        </div>
-        <div class="content">
-          <div class="text">
-            A Great Place <br />
-            For Grocery Products
-            <div class="small">
-              The Fruits, Vegetables, Spices, Rice, Oil And <br />
-              Other Wet And Dry Ingredients Provide The <br />
-              Homemaker's Easy Cooking And Delicious Food
-            </div>
-          </div>
-          <div class="image">
-            <img src="img/pic1.png" alt="" />
-          </div>
-        </div>
-      </div>
-
-      <div class="second-main">
-        <div class="container">
-          <h1>Top Categories</h1>
-          <div class="images">
-            <div class="box1">
-              <img src="img/vegetable.jpg" alt="" />
-              <div class="text">Vegetables</div>
-            </div>
-            <div class="box1">
-              <img src="img/fruits.png" alt="" />
-              <div class="text">Fruits</div>
-            </div>
-            <div class="box1">
-              <img src="img/fish.jpg" alt="" />
-              <div class="text">Fish</div>
-            </div>
-            <div class="box1">
-              <img src="img/meat.jpg" alt="" />
-              <div class="text">Meat</div>
-            </div>
-            <div class="box1">
-              <img src="img/rice.jpg" alt="" />
-              <div class="text">Rice</div>
-            </div>
-            <div class="box1">
-              <img src="img/grocery.jpg" alt="" />
-              <div class="text">Snacks</div>
-            </div>
-          </div>
-        </div>
-      </div>
+     
+        
     </main>
-    <!-- ================end main============== -->
+    <!-- ================end main-section============== -->
   </body>
 </html>
