--- a/COMPONENT2/index.html
+++ b/COMPONENT2/index.html
@@ -4,46 +4,81 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Grocery Store</title>
+    <title>Equinox Grocery Store</title>
     <link rel="stylesheet" href="css/style.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
   </head>
+
   <body>
     <!-- ===========header-section start=========== -->
-    <header>
-      <div class="header-1">
-        <a href="#" class="logo"><i class="fa fa-shopping-basket"></i>Equinox</a>
-
-        <form action="" class="search-box-container">
-          <input type="search" id="search-box" placeholder="Search here......">
-          <label for="search-box" class="fa fa-search"></label>
-        </form>
+    <header class="header">
+      <a href="#" class="logo"> <i class="fa fa-shopping-basket"></i>Equinox</a>
+      <nav class="navbar">
+        <a href="#home">home</a>
+        <a href="#features">features</a>
+        <a href="#products">products</a>
+        <a href="#categories">categories</a>
+        <a href="#review">review</a>
+        <a href="#blogs">blogs</a>
+      </nav>
+      <div class="icons">
+        <div class="fa fa-bars" id="menu-btn"></div>
+        <div class="fa fa-search" id="search-btn"></div>
+        <div class="fa fa-shopping-cart" id="cart-btn"></div>
+        <div class="fa fa-user" id="user-btn"></div>
       </div>
-      <div class="header-2">
-        <div id="menu-bar" class="fa fa-bars"></div>
-        <nav class="navbar">
-          <a href="#home">Home</a>
-          <a href="#categories">Categories</a>
-          <a href="#product">Product</a>
-          <a href="#deal">Deal</a>
-          <a href="#product">Product</a>
-        </nav>
-        <div class="icons">
-          <a href="#" class="fa fa-shopping-cart"></a>
-          <a href="#" class="fa fa-heart"></a>
-          <a href="#" class="fa fa-user-circle"></a>
+      <form action="" class="search-form">
+        <input type="search" id="search-box" placeholder="search here..." />
+        <label for="search-box" class="fa fa-search"></label>
+      </form>
+      <div class="shopping-cart">
+        <div class="box">
+          <i class="fa fa-trash"></i>
+          <img src="img/watermelon.jpg" alt="" />
+          <div class="content">
+            <h3>watermelon</h3>
+            <span class="price">$4.99/-</span>
+            <span class="quantity">qty : 1</span>
+          </div>
         </div>
+        <div class="box">
+          <i class="fa fa-trash"></i>
+          <img src="img/onion.jpg" alt="" />
+          <div class="content">
+            <h3>onion</h3>
+            <span class="price">$4.99/-</span>
+            <span class="quantity">qty : 1</span>
+          </div>
+        </div>
+        <div class="box">
+          <i class="fa fa-trash"></i>
+          <img src="img/chicken.jpg" alt="" />
+          <div class="content">
+            <h3>chicken</h3>
+            <span class="price">$4.99/-</span>
+            <span class="quantity">qty : 1</span>
+          </div>
+        </div>
+        <div class="total">total : $19.69/-</div>
+        <a href="#" class="btn">checkout</a>
       </div>
+      <form action="" class="login-form">
+        <h3>login now</h3>
+        <input type="email" placeholder="your email" class="box">
+        <input type="password" placeholder="your password" class="box">
+        <p>forget your password? <a href="#">click here</a></p>
+        <p>don't have an account? <a href="#">create new</a></p>
+        <input type="submit" value="Login now" class="btn">
+      </form>
     </header>
     <!-- ==========end header-section========= -->
     <!-- ================main-section starts========== -->
-    <main>
-     
-        
-    </main>
+    <main></main>
     <!-- ================end main-section============== -->
+   <!-- *******************custom javascript link********** -->
+    <script src="js/script.js"></script>
   </body>
 </html>
