--- a/COMPONENT2/index.html
+++ b/COMPONENT2/index.html
@@ -10,6 +10,10 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"
+    />
   </head>
 
   <body>
@@ -67,18 +71,180 @@
       </div>
       <form action="" class="login-form">
         <h3>login now</h3>
-        <input type="email" placeholder="your email" class="box">
-        <input type="password" placeholder="your password" class="box">
+        <input type="email" placeholder="your email" class="box" />
+        <input type="password" placeholder="your password" class="box" />
         <p>forget your password? <a href="#">click here</a></p>
         <p>don't have an account? <a href="#">create new</a></p>
-        <input type="submit" value="Login now" class="btn">
+        <input type="submit" value="Login now" class="btn" />
       </form>
     </header>
     <!-- ==========end header-section========= -->
-    <!-- ================main-section starts========== -->
-    <main></main>
-    <!-- ================end main-section============== -->
-   <!-- *******************custom javascript link********** -->
+    <!-- ================home-section starts========== -->
+    <section class="home" id="home">
+      <div class="content">
+        <h3>Fresh and <span> organic </span> products for your</h3>
+        <p>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minus
+          numquam excepturi maiores sint vitae distinctio aperiam voluptatibus
+          perferendis!
+        </p>
+        <a href="#" class="btn">shop now</a>
+      </div>
+    </section>
+    <!-- ================end home-section============== -->
+    <!-- *******************features section start************* -->
+    <section class="features" id="features">
+      <h1 class="heading">our <span> features</span></h1>
+      <div class="box-container">
+        <div class="box">
+          <img src="img/features1.png" alt="" />
+          <h3>fresh and organic</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio
+            ducimus minima veniam vero totam?
+          </p>
+          <a href="#" class="btn">read more</a>
+        </div>
+        <div class="box">
+          <img src="img/features2.png" alt="" />
+          <h3>free delivery</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio
+            ducimus minima veniam vero totam?
+          </p>
+          <a href="#" class="btn">read more</a>
+        </div>
+        <div class="box">
+          <img src="img/features3.png" alt="" />
+          <h3>easy payments</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio
+            ducimus minima veniam vero totam?
+          </p>
+          <a href="#" class="btn">read more</a>
+        </div>
+      </div>
+    </section>
+    <!-- *******************features section end************* -->
+    <!-- **************products section starts*********** -->
+    <section class="products" id="products">
+      <h1 class="heading">our <span>products</span></h1>
+      <div class="swiper product-slider">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide box">
+            <img src="img/orange.jpg" alt="" />
+            <h3>fresh orange</h3>
+            <div class="price">$4.99/- -10.99/-</div>
+            <div class="stars">
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star-half-empty"></i>
+            </div>
+            <a href="#" class="btn">add to cart</a>
+          </div>
+          <div class="swiper-slide box">
+            <img src="img/onion.jpg" alt="" />
+            <h3>fresh onion</h3>
+            <div class="price">$4.99/- -10.99/-</div>
+            <div class="stars">
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star-half-empty"></i>
+            </div>
+            <a href="#" class="btn">add to cart</a>
+          </div>
+          <div class="swiper-slide box">
+            <img src="img/meat.jpg" alt="" />
+            <h3>fresh meat</h3>
+            <div class="price">$4.99/- -10.99/-</div>
+            <div class="stars">
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+            </div>
+            <a href="#" class="btn">add to cart</a>
+          </div>
+        </div>
+      </div>
+      <div class="swiper product-slider">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide box">
+            <img src="img/cabbage (1).jpg" alt="" />
+            <h3>fresh cabbage</h3>
+            <div class="price">$4.99/- -10.99/-</div>
+            <div class="stars">
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star-half-empty"></i>
+            </div>
+            <a href="#" class="btn">add to cart</a>
+          </div>
+          <div class="swiper-slide box">
+            <img src="img/potato.jpg" alt="" />
+            <h3>fresh potato</h3>
+            <div class="price">$4.99/- -10.99/-</div>
+            <div class="stars">
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+            </div>
+            <a href="#" class="btn">add to cart</a>
+          </div>
+          <div class="swiper-slide box">
+            <img src="img/avocado.jpg" alt="" />
+            <h3>fresh avocado</h3>
+            <div class="price">$4.99/- -10.99/-</div>
+            <div class="stars">
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+            </div>
+            <a href="#" class="btn">add to cart</a>
+          </div>
+          <div class="swiper-slide box">
+            <img src="img/carrot.jpg" alt="" />
+            <h3>fresh carrot</h3>
+            <div class="price">$4.99/- -10.99/-</div>
+            <div class="stars">
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+            </div>
+            <a href="#" class="btn">add to cart</a>
+          </div>
+          <div class="swiper-slide box">
+            <img src="img/lemon.jpg" alt="" />
+            <h3>Green lemon</h3>
+            <div class="price">$4.99/- -10.99/-</div>
+            <div class="stars">
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star-half-empty"></i>
+            </div>
+            <a href="#" class="btn">add to cart</a>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- **************products section ends*********** -->
+    <!-- *******************custom javascript link********** -->
+    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
     <script src="js/script.js"></script>
   </body>
 </html>
