--- a/COMPONENT2/index.html
+++ b/COMPONENT2/index.html
@@ -243,6 +243,38 @@
       </div>
     </section>
     <!-- **************products section ends*********** -->
+
+  <!-- ************categories section starts**************** -->
+     <section class="categories" id="categories">
+      <h1 class="heading">product <span>categories</span></h1>
+        <div class="box-container">
+          <div class="box">
+            <img src="img/vegetable.jpg" alt="">
+            <h3>vegetables</h3>
+            <p>upto 45% off</p>
+            <a href="#" class="btn">shop now</a>
+          </div>
+          <div class="box">
+            <img src="img/fruits.png" alt="">
+            <h3>fresh fruits</h3>
+            <p>upto 45% off</p>
+            <a href="#" class="btn">shop now</a>
+          </div>
+          <div class="box">
+            <img src="img/dairy.jpg" alt="">
+            <h3>dairy products</h3>
+            <p>upto 45% off</p>
+            <a href="#" class="btn">shop now</a>
+          </div>
+          <div class="box">
+            <img src="img/freshmeat.jpg" alt="">
+            <h3>fresh meats</h3>
+            <p>upto 45% off</p>
+            <a href="#" class="btn">shop now</a>
+          </div>
+        </div>
+     </section>
+  <!-- ************categories section ends**************** -->
     <!-- *******************custom javascript link********** -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
     <script src="js/script.js"></script>
