--- a/COMPONENT2/signin.html
+++ b/COMPONENT2/signin.html
@@ -25,9 +25,11 @@
       <a href="index.html">home</a>
       <a href="features.html">features</a>
       <a href="products.html">products</a>
-      <a href="#categories">categories</a>
+      <a href="categories.html">categories</a>
       <a href="review.html">review</a>
-      <a href="#blogs">blogs</a>
+      <a href="blogs.html">blogs</a>
+      <a href="deals.html">Deals</a>
+      <a href="contact.html">Contact</a>
     </nav>
     <div class="icons">
       <div class="fa fa-bars" id="menu-btn"></div>
@@ -83,7 +85,7 @@
     <form action="" class="signup-form">
       <h3>Sign Up</h3>
       <p>It's quick and easy</p>
-    <hr>
+  
     <div class="container">
       <div class="name-group">
         <input type="text" placeholder="First name">
@@ -203,7 +205,7 @@
   <!-- ==========end header-section========= -->
   <!-- ================home-section starts========== -->
  
-
+<script src="js/script.js"></script>
 
 </body>
 </html>
