--- a/COMPONENT2/blogs.html
+++ b/COMPONENT2/blogs.html
@@ -36,7 +36,7 @@
         <div class="fa fa-shopping-cart" id="cart-btn"></div>
         <div class="fa fa-user" id="user-btn"></div>
       </div>
-      <form action="" class="search-form">
+      <form action="/COMPONENT2/day9/index.html" class="search-form">
         <input type="search" id="search-box" placeholder="search here..." />
         <label for="search-box" class="fa fa-search"></label>
       </form>
@@ -69,9 +69,9 @@
           </div>
         </div>
         <div class="total">total : $19.69/-</div>
-        <a href="#" class="btn">checkout</a>
+        <a href="/COMPONENT2/day9/index.html" class="btn">checkout</a>
       </div>
-      <form action="" class="login-form">
+      <form action="/COMPONENT2/day9/index.html" class="login-form">
         <h3>login now</h3>
         <input type="email" placeholder="your email" class="box" />
         <input type="password" placeholder="your password" class="box" />
