--- a/COMPONENT2/contact.html
+++ b/COMPONENT2/contact.html
@@ -71,7 +71,7 @@
         <div class="total">total : $19.69/-</div>
         <a href="#" class="btn">checkout</a>
       </div>
-      <form action="" class="login-form">
+      <form action="/COMPONENT2/day9/index.html" class="login-form">
         <h3>login now</h3>
         <input type="email" placeholder="your email" class="box" />
         <input type="password" placeholder="your password" class="box" />
