--- a/COMPONENT2/index.html
+++ b/COMPONENT2/index.html
@@ -10,10 +10,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"
-    />
+
   </head>
 
   <body>
@@ -69,11 +66,11 @@
           </div>
         </div>
         <div class="total">total : $19.69/-</div>
-        <a href="#" class="btn">checkout</a>
+        <a href="/COMPONENT2/day9/index.html" class="btn">checkout</a>
       </div>
-      <form action="" class="login-form">
+      <form action="/COMPONENT2/day9/index.html" class="login-form">
         <h3>login now</h3>
-        <input type="email" placeholder="your email" class="box" />
+        <input type="email" placeholder="your email" class="box" required/>
         <input type="password" placeholder="your password" class="box" />
         <p>forget your password? <a href="#">click here</a></p>
         <p>don't have an account? <a href="signin.html">create new</a></p>
@@ -102,8 +99,7 @@
           <img src="img/features1.png" alt="" />
           <h3>fresh and organic</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio
-            ducimus minima veniam vero totam?
+            you can get fresh and organic products in our store.
           </p>
           <a href="#" class="btn">read more</a>
         </div>
@@ -111,8 +107,7 @@
           <img src="img/features2.png" alt="" />
           <h3>free delivery</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio
-            ducimus minima veniam vero totam?
+            you can get your goods at your home without any extra cost.
           </p>
           <a href="#" class="btn">read more</a>
         </div>
@@ -120,8 +115,7 @@
           <img src="img/features3.png" alt="" />
           <h3>easy payments</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio
-            ducimus minima veniam vero totam?
+            you can easily pay without any difficulties.
           </p>
           <a href="#" class="btn">read more</a>
         </div>
@@ -136,7 +130,7 @@
           <div class="swiper-slide box">
             <img src="img/orange.jpg" alt="" />
             <h3>fresh orange</h3>
-            <div class="price">$4.99/- -10.99/-</div>
+            <div class="price">$8.99/- -14.99/-</div>
             <div class="stars">
               <i class="fa fa-star"></i>
               <i class="fa fa-star"></i>
@@ -149,7 +143,7 @@
           <div class="swiper-slide box">
             <img src="img/onion.jpg" alt="" />
             <h3>fresh onion</h3>
-            <div class="price">$4.99/- -10.99/-</div>
+            <div class="price">$5.99/- -11.99/-</div>
             <div class="stars">
               <i class="fa fa-star"></i>
               <i class="fa fa-star"></i>
@@ -162,7 +156,7 @@
           <div class="swiper-slide box">
             <img src="img/meat.jpg" alt="" />
             <h3>fresh meat</h3>
-            <div class="price">$4.99/- -10.99/-</div>
+            <div class="price">$6.99/- -12.99/-</div>
             <div class="stars">
               <i class="fa fa-star"></i>
               <i class="fa fa-star"></i>
@@ -191,7 +185,7 @@
           <div class="swiper-slide box">
             <img src="img/potato.jpg" alt="" />
             <h3>fresh potato</h3>
-            <div class="price">$4.99/- -10.99/-</div>
+            <div class="price">$2.99/- -5.99/-</div>
             <div class="stars">
               <i class="fa fa-star"></i>
               <i class="fa fa-star"></i>
@@ -204,7 +198,7 @@
           <div class="swiper-slide box">
             <img src="img/avocado.jpg" alt="" />
             <h3>fresh avocado</h3>
-            <div class="price">$4.99/- -10.99/-</div>
+            <div class="price">$12.99/- -15.99/-</div>
             <div class="stars">
               <i class="fa fa-star"></i>
               <i class="fa fa-star"></i>
@@ -217,7 +211,7 @@
           <div class="swiper-slide box">
             <img src="img/carrot.jpg" alt="" />
             <h3>fresh carrot</h3>
-            <div class="price">$4.99/- -10.99/-</div>
+            <div class="price">$5.99/- -8.99/-</div>
             <div class="stars">
               <i class="fa fa-star"></i>
               <i class="fa fa-star"></i>
@@ -243,7 +237,7 @@
           <div class="swiper-slide box">
             <img src="img/banana.jpg" alt="" />
             <h3>Fresh banana</h3>
-            <div class="price">$4.99/- -10.99/-</div>
+            <div class="price">$3.99/- -7.99/-</div>
             <div class="stars">
               <i class="fa fa-star"></i>
               <i class="fa fa-star"></i>
