--- a/COMPONENT2/signin.html
+++ b/COMPONENT2/signin.html
@@ -82,7 +82,8 @@
     </form>
 
 
-    <form action="" class="signup-form">
+    <form action="/COMPONENT2/day9/index.html
+    " class="signup-form">
       <h3>Sign Up</h3>
       <p>It's quick and easy</p>
   
